# zig-cc-toolchain-issue

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  go.mod
cmd/: BUILD.bazel  main.go
lib/rand/: BUILD.bazel
