load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/prestonvanloon/zig-cc-toolchain-issue/cmd",
    visibility = ["//visibility:private"],
    deps = ["//lib/rand"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
